--- a/NickEWebsite/ClientApp/src/app/about-me/about-me.component.css
+++ b/NickEWebsite/ClientApp/src/app/about-me/about-me.component.css
@@ -1,10 +1,14 @@
 .card {
     background-color:gray;
-    min-width:30rem;
-    height:fit-content;
+    min-width:20rem;
+    height:25rem;
+    margin-top:50px;
+    margin-bottom: 50px;
 }
 .card-text {
-    color:white;
+  color: white;
+  display: table-cell;
+  vertical-align: middle;
 }
 .card-title {
     color:white
