--- a/NickEWebsite/ClientApp/src/app/education/education.component.html
+++ b/NickEWebsite/ClientApp/src/app/education/education.component.html
@@ -1,5 +1,3 @@
-
-
 <div layout="row" layout-align="space-between" flex>
   <div class="container margin-30">
     <div class="card">
@@ -7,17 +5,17 @@
         <ol class="list-group">
           <li *ngFor="let item of data" class="list-group-item d-flex justify-content-between align-items-start">
             <div class="ms-2 me-auto">
-              <img class="card-img-top" src="{{item.image_data}}">
-              <div class="fw-bold font-fam">{{item.name}} <span class="badge bg-primary rounded-pill">{{item.date}}</span> </div>
-              <div class="description" >{{item.description}}</div>
+              <div class="fw-bold font-fam">{{item.school_name}} <span class="badge bg-primary rounded-pill">{{item.date}}</span> </div>
+              <div class="rounded-pill">{{item.degree}}</div>
+              <div class="description">{{item.description}}</div>
               <div class="navbar-brand">
                 Github Link:
               </div>
             </div>
-            
+
           </li>
         </ol>
       </div>
     </div>
   </div>
-  </div>
+</div>
