--- a/NickEWebsite/ClientApp/src/app/home/home.component.html
+++ b/NickEWebsite/ClientApp/src/app/home/home.component.html
@@ -33,7 +33,6 @@
         <h3 class="float-md-start mb-0">Nicholas Espinosa</h3>
         <nav class="nav nav-masthead justify-content-center float-md-end">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="#">Features</a>
           <a class="nav-link" href="#">Contact</a>
         </nav>
       </div>
@@ -41,6 +40,7 @@
 
     <main class="px-3">
       <app-about-me></app-about-me>
+      <div><app-expir></app-expir></div>
     </main>
 
     <footer class="mt-auto text-white-50">
