FIX()- Added a skills component along with a acomplishments list component

--- a/NickEWebsite/ClientApp/src/app/expir/expir.component.html
+++ b/NickEWebsite/ClientApp/src/app/expir/expir.component.html
@@ -13,6 +13,12 @@
               <div class="navbar-brand">
                 Github Link:
               </div>
+              <div class="title">Acomplishments</div>
+              <ul>
+                <li>
+                  {{item.acomplishments}}
+                </li>
+              </ul>
             </div>
             
           </li>
