--- a/NickEWebsite/ClientApp/src/app/home/home.component.html
+++ b/NickEWebsite/ClientApp/src/app/home/home.component.html
@@ -39,7 +39,11 @@
     </header>
 
     <main class="px-3">
-      <app-about-me></app-about-me>
+      <span>
+        <app-about-me></app-about-me>
+        <app-education></app-education>
+      </span>
+     
       <div><app-expir></app-expir></div>
     </main>
 
