Cleaned up bugs and polished some content inside  components

--- a/NickEWebsite/ClientApp/src/app/about-me/about-me.component.html
+++ b/NickEWebsite/ClientApp/src/app/about-me/about-me.component.html
@@ -1,8 +1,8 @@
 <div class="card" style="width: 18rem;">
   <div class="card-body">
     
-      <h5 class="card-title">About Me</h5>
-      <p class="card-text">I am a recent graduate looking for entry level software engineer positions. I have experience in full stack development primarily using react however this website was built using the .NET framework with Angular components.</p>
+      <h5 class="card-title">{{data.title}}</h5>
+      <p class="card-text">{{data.about_description}}</p>
     
   </div>
 </div>
