--- a/NickEWebsite/ClientApp/src/app/about-me/about-me.component.css
+++ b/NickEWebsite/ClientApp/src/app/about-me/about-me.component.css
@@ -8,7 +8,8 @@
 .card-text {
   color: white;
   display: table-cell;
-  vertical-align: middle;
+  text-align:left;
+  font-weight:bolder;
 }
 .card-title {
     color:white
