--- a/NickEWebsite/ClientApp/src/app/home/home.component.html
+++ b/NickEWebsite/ClientApp/src/app/home/home.component.html
@@ -39,13 +39,14 @@
     </header>
 
     <main class="px-3">
-      <span>
+      <div style="display: flex; flex-grow: grow">
         <app-about-me></app-about-me>
         <app-education></app-education>
-      </span>
-     
-      <div><app-expir></app-expir></div>
-    </main>
+        <app-skills></app-skills>
+      </div>
+
+        <div><app-expir></app-expir></div>
+</main>
 
     <footer class="mt-auto text-white-50">
       <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
