--- a/NickEWebsite/ClientApp/src/app/skills/skills.component.html
+++ b/NickEWebsite/ClientApp/src/app/skills/skills.component.html
@@ -1,1 +1,19 @@
-<p>skills works!</p>
+<div layout="row" layout-align="space-between" flex>
+  <div class="container margin-30">
+    <div class="card">
+      <div class="card-title">Skills</div>
+      <div class="card-body">
+        <ol class="list-group">
+          <li *ngFor="let item of data" class="list-group-item justify-content-between align-items-start">
+            <div class="ms-2 me-auto">
+              <div class="fw-bold font-fam">{{item.skill_name}} <span class="badge box-shadow rounded-pill">{{item.proficency}}</span> </div>              
+
+            </div>
+
+          </li>
+        </ol>
+      </div>
+    </div>
+  </div>
+</div>
+
