polished some visual bugs

--- a/NickEWebsite/ClientApp/src/app/home/home.component.html
+++ b/NickEWebsite/ClientApp/src/app/home/home.component.html
@@ -39,7 +39,7 @@
     </header>
 
     <main class="px-3">
-      <div style="display: flex; flex-grow: grow">
+      <div align="center" style="display: flex; flex-grow: grow">
         <app-about-me></app-about-me>
         <app-education></app-education>
         <app-skills></app-skills>
