--- a/NickEWebsite/ClientApp/src/app/skills/skills.component.html
+++ b/NickEWebsite/ClientApp/src/app/skills/skills.component.html
@@ -6,7 +6,7 @@
         <ol class="list-group">
           <li *ngFor="let item of data" class="list-group-item justify-content-between align-items-start">
             <div class="ms-2 me-auto">
-              <div class="fw-bold font-fam">{{item.skill_name}} <span class="badge box-shadow rounded-pill">{{item.proficency}}</span> </div>              
+              <div class="fw-bold font-fam">{{item.skill_name}} <span class="skill">{{item.proficency}}</span> </div>              
 
             </div>
 
