--- a/NickEWebsite/ClientApp/src/app/skills/skills.component.css
+++ b/NickEWebsite/ClientApp/src/app/skills/skills.component.css
@@ -1,5 +1,5 @@
 .margin-30 {
-  margin: 30px;
+  margin: 50px;
 }
 
 .font-fam {
@@ -14,10 +14,10 @@
   align-content:flex-end;
 }
 
-.badge {
-  display:inline-flex;
-  margin-left:auto;
-  color:blueviolet;
+.skill {
+    color:darkorchid;
+    float:right;
+    font-weight:normal;
 }
 
 .navbar-brand {
