--- a/NickEWebsite/ClientApp/src/app/education/education.component.css
+++ b/NickEWebsite/ClientApp/src/app/education/education.component.css
@@ -35,4 +35,10 @@
     font-weight:bold;
     font-style:italic;
 }
-
+.card-title {
+  font-weight: bolder;
+  font-size: large;
+}
+.description {
+    margin:1rem;
+}
