--- a/NickEWebsite/ClientApp/src/app/home/home.component.html
+++ b/NickEWebsite/ClientApp/src/app/home/home.component.html
@@ -39,14 +39,13 @@
     </header>
 
     <main class="px-3">
-      <div align="center" style="display: flex; flex-grow: grow">
+      <div class="top" style="display: flex; flex-grow: grow; flex-direction: row">
         <app-about-me></app-about-me>
         <app-education></app-education>
         <app-skills></app-skills>
       </div>
-
         <div><app-expir></app-expir></div>
-</main>
+    </main>
 
     <footer class="mt-auto text-white-50">
       <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
