--- a/NickEWebsite/ClientApp/src/app/education/education.component.html
+++ b/NickEWebsite/ClientApp/src/app/education/education.component.html
@@ -1,7 +1,7 @@
 <div layout="row" layout-align="space-between" flex>
   <div class="container margin-30">
     <div class="card">
-      Education
+      <div class="card-title">Education</div>
       <div class="card-body">
         <ol class="list-group">
           <li *ngFor="let item of data" class="list-group-item d-flex justify-content-between align-items-start">
