--- a/NickEWebsite/ClientApp/src/app/expir/expir.component.html
+++ b/NickEWebsite/ClientApp/src/app/expir/expir.component.html
@@ -3,7 +3,7 @@
 <div layout="row" layout-align="space-between" flex>
   <div class="container margin-30">
     <div class="card">
-      Expirence and Projects
+      <div class="card-title">Projects and Expirence</div>
       <div class="card-body">
         <ol class="list-group">
           <li *ngFor="let item of data" class="list-group-item d-flex justify-content-between align-items-start">
