ISSUE#9(FIX): Fixed remaining broken links

--- a/NickEWebsite/ClientApp/src/app/expir/expir.component.html
+++ b/NickEWebsite/ClientApp/src/app/expir/expir.component.html
@@ -20,7 +20,7 @@
               <div class="tech_list">Technologies used: {{item.tech_list}}</div>
               <div class="demo_link">
                 DEMO: 
-                <a href="url">{{item.demo_link}}</a>
+                <a href="{{item.demo_link}}">{{item.demo_link}}</a>
               </div>
               <div class="navbar-brand">
                 Github Link:
